#
# This file is protected by Copyright. Please refer to the COPYRIGHT file
# distributed with this source distribution.
#
# This file is part of REDHAWK bulkioInterfaces.
#
# REDHAWK bulkioInterfaces is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any
# later version.
#
# REDHAWK bulkioInterfaces is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more
# details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program.  If not, see http://www.gnu.org/licenses/.
#

SUBDIRS = components/CPP_Ports/cpp components/sri_changed_cpp/cpp
SUBDIRS += components/TestLargePush/cpp
SUBDIRS += components/multiout_attachable/cpp
SUBDIRS += components/Oversized_framedata/cpp
SUBDIRS += components/src/cpp
SUBDIRS += components/snk_slow/cpp
if HAVE_JAVASUPPORT
SUBDIRS += components/TestLargePush/java
SUBDIRS += components/Java_Ports/java
SUBDIRS += components/multiout_attachable/java
SUBDIRS += components/Oversized_framedata/java
SUBDIRS += devices/dev_src/java devices/dev_snk/java
endif
SUBDIRS += tests/cpp
SUBDIRS += tests/transport_api
