#
# This file is protected by Copyright. Please refer to the COPYRIGHT file 
# distributed with this source distribution.
# 
# This file is part of REDHAWK core.
# 
# REDHAWK core is free software: you can redistribute it and/or modify it under 
# the terms of the GNU Lesser General Public License as published by the Free 
# Software Foundation, either version 3 of the License, or (at your option) any 
# later version.
# 
# REDHAWK core is distributed in the hope that it will be useful, but WITHOUT 
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS 
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more
# details.
# 
# You should have received a copy of the GNU Lesser General Public License 
# along with this program.  If not, see http://www.gnu.org/licenses/.
#

nobase_dist_idl_DATA = redhawk/BURSTIO/burstioDataTypes.idl \
		       redhawk/BURSTIO/burstio_burstByte.idl \
		       redhawk/BURSTIO/burstio_burstDouble.idl \
		       redhawk/BURSTIO/burstio_burstFloat.idl \
		       redhawk/BURSTIO/burstio_burstLong.idl \
		       redhawk/BURSTIO/burstio_burstLongLong.idl \
		       redhawk/BURSTIO/burstio_burstShort.idl \
		       redhawk/BURSTIO/burstio_burstUlong.idl \
		       redhawk/BURSTIO/burstio_burstUbyte.idl \
		       redhawk/BURSTIO/burstio_burstUlongLong.idl \
		       redhawk/BURSTIO/burstio_burstUshort.idl
